src/css/index.module.css
.wrapper {
   margin: 0;
   padding: 0;
   width: 100vw;
   height: 100vh;
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: minmax(60px, 30vh) max-content auto;
   overflow: hidden;
}

#debatenav {
   grid-column: 1 / 5;
   grid-row: 1 / span 2;
   justify-self: end;
   align-self: center;
   font-family: "HelveticaNeue-CondensedBold", "Helvetica Neue";
   font-size: 36px;
   visibility: hidden;
   z-index: 3;
}

#devnav {
   grid-column: 7 / 11;
   grid-row: 1 / span 2;
   justify-self: start;
   align-self: center;
   font-family: "HelveticaNeue-CondensedBold", "Helvetica Neue";
   font-size: 36px;
   visibility: hidden;
   z-index: 2;
}

#img {
   grid-column:  4 / 8;
   grid-row: 2 / span 1;
   z-index: 0;
}
 
#debate {
   font-family: "HelveticaNeue-CondensedBold", "Helvetica Neue";
   grid-column: 1 / 6;
   grid-row: 1 / span 3;
   z-index: 2;
   overflow: hidden;
   transition: background-position 1s ease-in-out;
}

#dev {
   font-family: "HelveticaNeue-CondensedBold", "Helvetica Neue";
   grid-column: 6 / 11;
   grid-row: 1 / span 3;
   z-index: 1;
   overflow: hidden;
}

#title {
   grid-column: 6 / 11;
   grid-row: 3 / span 1;
   align-self: end;
   font-family: "HelveticaNeue", Helvetica;
   font-weight: bold;
}

#debateDesc {
   grid-column: 8 / 10;
   grid-row: 1 / span 2;
   font-family: "Avenir";
   color: #a7a7a7;
   align-self: center;
   z-index: 1;
}

#devDesc {
   grid-column: 2 / 4;
   grid-row: 1 / span 2;
   font-family: "Avenir";
   color: #a7a7a7;
   align-self: center;
   z-index: 1;
}

a {
   cursor: pointer;
}

a:hover {
}

@media screen and (orientation: portrait) {
   #debatenav {
      grid-column: 1 / 5;
      grid-row: 2 / span 1;
      justify-self: center;
      align-self: start;
   }

   #devnav {
      grid-column: 7 / 11;
      grid-row: 2 / span 1;
      justify-self: center;
      align-self: start;
   }

   #debateDesc {
      margin-top: -200px;
      grid-column: 8 / 10;
      grid-row: 2 / span 1;
   }

   #devDesc {
      margin-top: -200px;
      grid-column: 2 / 4;
      grid-row: 2 / span 1;
   }

   #img {
      grid-column:  3 / 9;
      grid-row: 2 / span 1;
   }

   #title {
      grid-column: 3 / 11;
   }
}

